--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "illuminate/html" : "5.*"
+        "illuminate/html" : "5.*",
+        "fortawesome/font-awesome": "4.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
